WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
264441
[iOS] Fix rendering of <select> in vertical writing mode
https://bugs.webkit.org/show_bug.cgi?id=264441
Summary
[iOS] Fix rendering of <select> in vertical writing mode
Aditya Keerthi
Reported
2023-11-08 15:02:16 PST
1. Glyph is positioned incorrectly 2. Element has the wrong metrics compared to horizontal writing mode
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-11-08 15:02:26 PST
<
rdar://problem/118141664
>
Aditya Keerthi
Comment 2
2023-11-08 17:06:43 PST
Pull request:
https://github.com/WebKit/WebKit/pull/20206
EWS
Comment 3
2023-11-09 09:03:15 PST
Committed
270453@main
(b6917b9c28b6): <
https://commits.webkit.org/270453@main
> Reviewed commits have been landed. Closing PR #20206 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug