[iOS] Fix rendering of <select> in vertical writing mode https://bugs.webkit.org/show_bug.cgi?id=264441 rdar://118141664

Reviewed by Tim Nguyen.

Fix the position of the arrows in vertical writing mode, and ensure logical
properties are used instead of physical properties.

* Source/WebCore/rendering/RenderThemeIOS.mm:
(WebCore::RenderThemeIOS::adjustRoundBorderRadius):
(WebCore::applyCommonButtonPaddingToStyle):
(WebCore::RenderThemeIOS::adjustMenuListButtonStyle const):
(WebCore::RenderThemeIOS::adjustButtonStyle const):
(WebCore::RenderThemeIOS::paintMenuListButtonDecorationsWithFormControlRefresh):
* Source/WebCore/rendering/style/RenderStyle.h:
* Source/WebCore/rendering/style/RenderStyleSetters.h:
(WebCore::RenderStyle::setLogicalMinHeight):
(WebCore::RenderStyle::setLogicalMaxHeight):

Canonical link: https://commits.webkit.org/270453@main